--- a/templates/flatrate/index.html.twig
+++ b/templates/flatrate/index.html.twig
@@ -17,9 +17,6 @@
             <br>
             Concernant les modes de paiement, tous les chauffeurs ne disposent pas d'appareils permettant les paiement par carte bancaire.
             Pensez à communiquer préalablement afin de vous munir du mode de paiement qui conviendra.
-            <br><br>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic, dolor expedita consequatur quisquam totam molestias sunt ab est nemo deserunt voluptates libero? Quo voluptas magni, id ipsa soluta laborum rem?
-            Totam sunt rerum blanditiis debitis facere! Ex autem quam similique corrupti temporibus vero quae qui repudiandae, nobis distinctio, delectus minima laborum tempora nostrum neque molestiae modi ullam, dolores asperiores id!
         </p>
         <img class="card--imground" src="{{ asset(sImgPath ~'misc/sumup.png') }}" alt="Photo d'un sumUp">
     </div>
@@ -63,12 +60,12 @@
                             {% elseif flatrate.pickupincluded %}
                             <img class="img--boolean"
                                 src="{{ asset(sImgPath ~'misc/true.png') }}"
-                                alt="image pour booléen"
+                                alt="image pour booléen TRUE"
                             >
                             {% else %}
                             <img class="img--boolean"
                                 src="{{ asset(sImgPath ~'misc/false.png') }}"
-                                alt="image pour booléen"
+                                alt="image pour booléen FALSE"
                             >
                             {% endif %}
                         </div>
