--- a/templates/homepage/index.html.twig
+++ b/templates/homepage/index.html.twig
@@ -38,10 +38,7 @@
         <div class="card--3D-horizontal">
             <p class="card--paragraph col-md-12 col-lg-8" id="services--p">
                 Vous avez besoin d'effectuer des transferts, sans risquer d'être en retard ? Votre temps est précieux et vous voudriez optimiser vos temps de trajets ?
-                Assurez-vous les services d'un professionnel pour tous vos déplacements, et passé au moto-taxi...
-                <br><br>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic, dolor expedita consequatur quisquam totam molestias sunt ab est nemo deserunt voluptates libero? Quo voluptas magni, id ipsa soluta laborum rem?
-                Totam sunt rerum blanditiis debitis facere! Ex autem quam similique corrupti temporibus vero quae qui repudiandae, nobis distinctio, delectus minima laborum tempora nostrum neque molestiae modi ullam, dolores asperiores id!
+                Assurez-vous les services d'un professionnel pour tous vos déplacements, et passez au moto-taxi...
             </p>
             <img class="card--imgsquare" src="{{ asset(sImgPath ~'homepage/embouteillage.jpg') }}" alt="Photo d'un embouteillage">
         </div>
@@ -184,6 +181,8 @@
                 <br>- carte pro
                 <br>- visite médicale
                 <br>- une assurance spécifique transport de personnes à titre onéreux est obligatoire
+                <br><br>
+                Tous se doivent d'être en capacité de présenter ces justificarifs, sur simple demande... 
             </p>
             <a href="https://www.economie.gouv.fr/dgccrf/Publications/Vie-Pratique/Fiches-pratiques/taxis-vtc-loti-motos-pro" target="_blank">
                 Pour obtenir plus d'information, consulter le site de la Direction Générale de la Concurrence,
@@ -200,6 +199,9 @@
                 <br>- casque
                 <br>- gants
                 <br>- veste avec airbag...
+                <br><br>
+                <img style="height:2em;width:2em;" src="{{ asset(sImgPath ~'misc/covid19.png') }}" alt="Photo d'une charlotte">
+                &emsp;
                 Pour vous garantir une totale protection contre la COVID-19, tous les équipements sont désinfectés 
                 après chaque utilisation.
             </p>
