--- a/templates/profile/changepicture.html.twig
+++ b/templates/profile/changepicture.html.twig
@@ -75,7 +75,7 @@
             <button class="btn btn-sm btn--blue" type="submit">
                 <i class="ri-cursor-line"></i>&ensp;Sélectionner
             </button>
-            <a class="btn btn-bg btn--secondary btn-return" href="{{ path('profile_user',{'id': app.user.id}) }}">
+            <a class="btn btn-sm btn--secondary btn-return" href="{{ path('profile_user',{'id': app.user.id}) }}">
                 <i class="ri-close-fill"></i>&ensp;Annuler
             </a>
         </div>
