--- a/templates/profile/user.html.twig
+++ b/templates/profile/user.html.twig
@@ -94,7 +94,7 @@
                 <button class="btn btn-sm btn--blue mb-3" type="submit">
                     <i class="ri-record-circle-line"></i>&ensp;Enregistrer les modifications
                 </button>
-                <a class="btn btn-sm btn--blue mb-3" href="{{ path('profile_pwd', {'id': app.user.id}) }}">
+                <a class="btn btn-sm btn--secondary mb-3" href="{{ path('profile_pwd', {'id': app.user.id}) }}">
                     <i class="ri-find-replace-line"></i>&ensp;<small>Modifier le mot de passe</small>
                 </a>
             </div>
